# DECaxp

./: .autotools  .cproject  .gitattributes  .gitignore  .project  AXP_21264_Instructions.h  Alpha AXP 21264 Data Flows.vsd  CMakeLists.txt  CppProperties.json  DEC Alpha AXP Code Compiler.xlsx  README.md  RULES  RULES.md  USER_GUIDE.md  build.sh
21264Processor/: AXP_21264_CPU.c  CMakeLists.txt
21264Processor/Caches/: AXP_21264_BCache.c  (+2 more)
21264Processor/Ebox/: AXP_21264_Ebox.c  AXP_21264_Ebox_Byte.c  AXP_21264_Ebox_Control.c  AXP_21264_Ebox_IntegerMath.c  AXP_21264_Ebox_LoadStore.c  AXP_21264_Ebox_LogicalShift.c  AXP_21264_Ebox_Misc.c  AXP_21264_Ebox_Multimedia.c  AXP_21264_Ebox_PALFunctions.c  AXP_21264_Ebox_VAX.c  CMakeLists.txt
CPU/: AXP_21264_CPU.c  CMakeLists.txt
CPU/Caches/: AXP_21264_BCache.c  AXP_21264_Cache.c
CPU/Cbox/: AXP_21264_Cbox.c  AXP_21264_Cbox_IOWB.c  AXP_21264_Cbox_MAF.c  AXP_21264_Cbox_PQ.c  AXP_21264_Cbox_VDB.c
CPU/Cbox/SystemInterface/: AXP_21264_to_System.c
CPU/Ebox/: AXP_21264_Ebox.c  AXP_21264_Ebox_Byte.c  AXP_21264_Ebox_Control.c  AXP_21264_Ebox_IntegerMath.c  AXP_21264_Ebox_LoadStore.c  AXP_21264_Ebox_LogicalShift.c  AXP_21264_Ebox_Misc.c  AXP_21264_Ebox_Multimedia.c  AXP_21264_Ebox_PALFunctions.c  AXP_21264_Ebox_VAX.c
CPU/Fbox/: AXP_21264_Fbox.c  AXP_21264_Fbox_Control.c  AXP_21264_Fbox_FPFunctions.c  AXP_21264_Fbox_LoadStore.c  AXP_21264_Fbox_OperateIEEE.c  AXP_21264_Fbox_OperateMisc.c  AXP_21264_Fbox_OperateVAX.c  CMakeLists.txt
CPU/Ibox/: AXP_21264_Ibox.c  AXP_21264_Ibox_Initialize.c  AXP_21264_Ibox_InstructionDecoding.c  AXP_21264_Ibox_InstructionInfo.c  AXP_21264_Ibox_PCHandling.c  AXP_21264_Ibox_Prediction.c
CPU/Mbox/: AXP_21264_Mbox.c
CommonUtilities/: AXP_Blocks.c  AXP_Configure.c  AXP_Dumps.c  AXP_Exceptions.c  AXP_Execute_Box.c  AXP_NameValuePair_Read.c  AXP_StateMachine.c  AXP_Trace.c  AXP_Utility.c  CMakeLists.txt
DECaxp/: CMakeLists.txt  DECaxp.c  DECaxp_Generate_SROM.c
DataFiles/: AXP_21264_Cbox_CSR.nvp  DEC_Alpha_AXP_Code_Compiler.rom  DECaxp Initial Configuration.xml  GetHex1.ps1
Devices/: CMakeLists.txt
Devices/VirtualDisks/: AXP_RAW.c  AXP_SSD.c  AXP_VHD.c  AXP_VHDX.c  AXP_VHD_Utility.c  AXP_VirtualDisk.c  CMakeLists.txt
ExternalDocumentation/: Alpha AXP 21264 Design Notes.txt  Alpha AXP CPU Interfaces.txt  Cache Coherency Design Spec.docx  CacheDesign.md  CommandsToSysDc Mapping.xlsx  DS12887A_TOY_Clock_Calculations.xlsx  Daylight Savings Time Design.txt  Dcache Address Decomposition.xlsm  IDE Addresses and Commands.xlsx  MIPS to AXP.txt  MIPS-2-AXP-Conversion.xlsx  VHDX Format Specification-v1.00.docx  ali1543 PCI Config.xlsx  dec.disks.txt  ide_ports.txt
Motherboard/: AXP_21274_AddressMapping.c  AXP_21274_System.c  CMakeLists.txt
Tests/: AXP_21264_Cache_Test.c  AXP_21264_Dump_Test.c  AXP_21264_FloatingPointTest.c  AXP_21264_Icache_Test.c  AXP_21264_IntegerLoadTest.c  AXP_21264_Prediction_Test.c  AXP_DS12887A_Test.c  AXP_Disk_Test.c  AXP_Telnet_Test.c  AXP_Test_Npcap.c  AXP_Test_Queues.c  AXP_Test_Structure_Sizes.c  AXP_Test_WinPcap.c  CMakeLists.txt
Tests/DataFiles/: Cache Test Description.txt  trace-12queens.txt  trace-fib30.txt  trace-matmul.txt  trace-ray.txt  trace1.txt  trace2.txt  trace3.txt  trace4.txt  trace5.txt
Tests/DataFiles/VHDTests/: RZ1CD-CSDynamic.txt  WindowsCreatedDynamic.vhd  WindowsCreatedDynamic.vhdx  WindowsCreatedDynamicVHD.txt  WindowsCreatedDynamicVHDX.txt  WindowsCreatedFixed.vhd  WindowsCreatedFixed.vhdx  WindowsCreatedFixedVHDX.txt
Tests/DataFiles/fpTestData/: Add-Cancellation.fptest  Add-Shift-And-Special-Significands.fptest  Basic-Types-Inputs.fptest  Basic-Types-Intermediate.fptest  Corner-Rounding.fptest  Decimal-Mul-Trailing-Zeros.fptest  Decimal-Rounding.fptest  Decimal-Trailing-And-Leading-Zeros-Result.fptest  Decimal-Underflow.fptest  Input-Special-Significand.fptest  MultiplyAdd-Shift.fptest  MultiplyAdd-Special-Events-Inexact.fptest  Rounding.fptest  Sticky-Bit-Calculation.fptest  Vicinity-Of-Rounding-Boundaries.fptest
Tests/VHDTests/: RZ1CD-CSDynamic.txt  WindowsCreatedDynamicVHD.txt  WindowsCreatedFixed.vhd
TyphoonTsunami/: AXP_21274_AddressMapping.c  AXP_21274_System.c  CMakeLists.txt
TyphoonTsunami/Cchip/: AXP_21274_Cchip.c  CMakeLists.txt
TyphoonTsunami/Cchip/CPUInterface/: AXP_21274_to_CPU.c
TyphoonTsunami/Dchip/: AXP_21274_Dchip.c  CMakeLists.txt
TyphoonTsunami/Pchip/: AXP_21274_Pchip.c  CMakeLists.txt
bld/: Makefile  Makefile.bak  Makefile.fnc  makefile
dat/: DEC Alpha AXP Code Compiler.csv  DEC_Alpha_AXP_Code_Compiler.csv  DEC_Alpha_AXP_Code_Compiler.rom  DEC_Alpha_AXP_Code_Compiler.xlsx  DECaxp First Configuration 20180101.xml  DECaxp Initial Configuration.xml  DesktopOK_x64.txt  Digital Alpha AXP Generations.xlsx
doc/: Alpha AXP 21264 Design Notes.txt  Alpha AXP CPU Interfaces.txt  CPUCommandsWithResponsesActions.xlsx  Cache Coherency Design Spec.docx  CommandsToSysDc Mapping.xlsx  Daylight Savings Time Design.txt  Dcache Address Decomposition.txt  Dcache Address Decomposition.xlsm  Dcache design specification.txt  Fault IPRs.xlsx  MIPS-2-AXP-Conversion.xlsx  Memory and Bcache Configurations.xlsx  Opcode Function Codes.xlsx  POI Address Analysis.xlsx  Tsunami-Typhoon Design Spec.docx  VGADOC 4 ReadMe.1st  dec.disks.txt  ide_ports.txt
nbproject/: configurations.xml  project.xml
src/: AXP_21264_CPU.h  AXP_21264_Cbox.c  AXP_21264_Cbox.h  AXP_21264_ICache.h  AXP_21264_IPRs.h  AXP_21264_Ibox.c  AXP_21264_Ibox.h  AXP_21264_Icache_Test.c  AXP_21264_Instructions.h  AXP_21264_Prediction_Test.c  AXP_21264_Predictions.c  AXP_21264_Predictions.h  AXP_Base_CPU.h  AXP_Blocks.c  AXP_Blocks.h  AXP_Configure.h  AXP_Utility.c  AXP_Utility.h  MIPS-2-AXP-Conversion.xlsx
tmp/: AXP_21264_AddressBits.h  AXP_21264_Mbox_Cache.c  AXP_21264_Reset.mac  CacheSet.cpp  CacheSet.h  cacheline.cpp  common.cpp  common.h  funcs.cpp  funcs.h  main.cpp
tst/: AXP_21264_Cache_Test.c  AXP_21264_Dump_Test.c  AXP_21264_FloatingPointTest.c  AXP_21264_Icache_Test.c  AXP_21264_IntegerLoadTest.c  AXP_21264_Prediction_Test.c  AXP_Test_Structure_Sizes.c  compress.trace
(+328 files in other folders)
